Bug 443866 - "Discover" returned when searching for "Dis", but not "D" or "Di", while Discord is found for all three
Summary: "Discover" returned when searching for "Dis", but not "D" or "Di", while Disc...
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.23.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-17 03:05 UTC by Justin Zobel
Modified: 2022-01-25 16:13 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments
Video demonstration (158.09 KB, video/mp4)
2021-10-17 03:05 UTC, Justin Zobel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin Zobel 2021-10-17 03:05:29 UTC
Created attachment 142520 [details]
Video demonstration

SUMMARY
When searching for Discover the search text D and Dis show Discover but not Di.

STEPS TO REPRODUCE
1. Open Kickoff
2. Start typing Dis and pause after each letter is typed
3. 

OBSERVED RESULT
Discover is not shown while search is at "Di"

EXPECTED RESULT
Discover is shown all the way through the search typing process.

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 35
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.2
Kernel Version: 5.14.11-300.fc35.x86_64 (64-bit)
Graphics Platform: X11
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 31.3 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2
Comment 1 Nate Graham 2021-10-17 22:53:28 UTC
Does this happen in KRunner as well?
Comment 2 Justin Zobel 2021-10-17 22:54:43 UTC
Yes.
Comment 3 Nate Graham 2021-10-18 15:15:38 UTC
Thanks.
Comment 4 Justin Zobel 2022-01-01 00:02:49 UTC
Still happening on 5.23.4
Comment 5 Nate Graham 2022-01-20 16:10:57 UTC
Your video actually doesn't show Discover being returned at "D", only at "Dis". But Discord is found for all three. I can reproduce that.
Comment 6 Alexander Lohnau 2022-01-20 19:14:36 UTC
Can confirm, have a local patch and will create a MR tomorrow.
Comment 7 Bug Janitor Service 2022-01-21 17:23:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1390
Comment 8 Nate Graham 2022-01-25 16:11:54 UTC
Git commit ac22a4f170d08552a6e7b00f77cd23dc244010fd by Nate Graham, on behalf of Alexander Lohnau.
Committed on 25/01/2022 at 16:02.
Pushed by ngraham into branch 'master'.

servicesrunner: Fix some apps not showing up when typing less than 3 characters

We want to check the user-visible name, not the name of the file on disk.

In case we type "di", results like "Discord" or "Discover" are expected. With the old
logic however, we would reject discover, because the desktop file is called "org.kde.discover".

R  +2    -1    runners/services/autotests/fixtures/org.kde.systemsettings.desktop [from: runners/services/autotests/fixtures/systemsettings.desktop - 070% similarity]
M  +25   -0    runners/services/autotests/servicerunnertest.cpp
M  +1    -1    runners/services/servicerunner.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/ac22a4f170d08552a6e7b00f77cd23dc244010fd
Comment 9 Nate Graham 2022-01-25 16:12:17 UTC
Git commit 3c459c4f760d0beec73083b02576dfc0b4cbb36f by Nate Graham, on behalf of Alexander Lohnau.
Committed on 25/01/2022 at 16:12.
Pushed by ngraham into branch 'Plasma/5.24'.

servicesrunner: Fix some apps not showing up when typing less than 3 characters

We want to check the user-visible name, not the name of the file on disk.

In case we type "di", results like "Discord" or "Discover" are expected. With the old
logic however, we would reject discover, because the desktop file is called "org.kde.discover".


(cherry picked from commit ac22a4f170d08552a6e7b00f77cd23dc244010fd)

R  +2    -1    runners/services/autotests/fixtures/org.kde.systemsettings.desktop [from: runners/services/autotests/fixtures/systemsettings.desktop - 070% similarity]
M  +25   -0    runners/services/autotests/servicerunnertest.cpp
M  +1    -1    runners/services/servicerunner.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/3c459c4f760d0beec73083b02576dfc0b4cbb36f